# fileclip

./: README.md  pyproject.toml  todo.md  watcher_design.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
.prepdir/: config.yaml
src/: fileclip.py  main.py
src/fileclip/: __init__.py  file_clip.py  fileclip_watcher.py  main.py
tests/: test_file_clip.py  test_fileclip_watcher.py  test_integration_watcher.md  test_integration_watcher.py
