[project]
name = "fileclip"
version = "0.1.0"
description = "A cross-platform utility to copy files to the system clipboard for pasting as file references (e.g., into LLM web UIs)."
readme = "README.md"
authors = [
    {name = "eyecantell", email = "paul@pneuma.solutions"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Development Status :: 4 - Beta",
]
keywords = [
    "clipboard",
    "file",
    "file-upload",
]
requires-python = ">=3.9"
dependencies = [
    "pyperclip>=1.8.2",
    "watchdog>=6.0.0",
    "httpx>=0.28.1",
]

[project.scripts]
fileclip = "fileclip.main:main"
fileclip-watcher = "fileclip.fileclip_watcher:main"

[project.urls]
Repository = "https://github.com/eyecantell/fileclip"
Issues = "https://github.com/eyecantell/fileclip/issues"
Documentation = "https://github.com/eyecantell/fileclip#readme"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
package-dir = "src"
includes = ["src/fileclip"]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.0",
    "coverage>=7.2.7",
]
dev = [
    "build>=1.2.2",
    "twine>=5.1.1",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # Line length handled by ruff formatter
]

[tool.pytest.ini_options]
addopts = "--cov=src/fileclip --cov-report=term --cov-report=html"
python_files = "test_*.py"
testpaths = ["tests"]